--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,31 @@
-<div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+<nav>
+  <div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+    <div class="item item-1" fxFlex="15%"><a href="#">Logo</a></div>
+    <div class="item item-2" fxFlex="20%" fxFlexOrder="3">Item 2</div>
+    <div class="item item-3" fxFlex>
+      <ul>
+        <li><a href="dummy.html">Dummy</a></li>
+        <li><a [routerLink]="['/second', {outlets: {firstchild: ['firstchildcomp'], secondchild: ['secondchildcomp']}}]">Secondscreen</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<router-outlet></router-outlet>
+<!--<div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
   <div class="item item-1" fxFlex="15%">Item 1</div>
   <div class="item item-2" fxFlex="20%" fxFlexOrder="3">Item 2</div>
   <div class="item item-3" fxFlex>Item 3</div>
-</div>
-<div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+</div>-->
+<!--<div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
   <div class="item item-4" fxFlex fxFlexOffset="50px" fxFlexOffset.xs="0">Item 4</div>
   <div class="item item-5" fxFlex="200px">Item 5</div>
-</div>
-<h1>
+</div>-->
+<!--<h1>
   {{title}}
-</h1>
-<div class="flexDemoContainer">
+</h1>-->
+<!--<div class="flexDemoContainer">
   <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxFlex>
     <div fxFlex> I'm above on mobile, and left on larger devices. </div>
     <div fxFlex> I'm below on mobile, and right on larger devices. </div>
   </div>
-</div>
+</div>-->
